--- a/bin/index.css
+++ b/bin/index.css
@@ -1,53 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:900|Roboto:400,700|Roboto+Mono");
-.Hero {
-  background: #f7ea3f;
-  color: black;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-bottom: 100px; }
-  .Hero__box {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center; }
-  .Hero__icon {
-    height: 8rem; }
-  .Hero__title {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 900;
-    font-size: 6rem;
-    margin: 0;
-    text-shadow: 0px 3px 0px #e1d430, 0px 14px 10px rgba(0, 0, 0, 0.15), 0px 24px 2px rgba(0, 0, 0, 0.1), 0px 34px 30px rgba(0, 0, 0, 0.1); }
-  .Hero__slogan {
-    margin-bottom: 50px;
-    display: block; }
-  .Hero__btn {
-    text-decoration: none;
-    color: black;
-    border: 2px solid black;
-    padding: 10px 20px;
-    border-radius: 30px;
-    margin: 0 5px;
-    transition: all .3s ease; }
-    .Hero__btn:focus, .Hero__btn:hover {
-      background-color: black;
-      color: white; }
-  .Hero__code {
-    font-family: monospace;
-    background: black;
-    color: white;
-    padding: 8px 15px;
-    margin-top: 25px;
-    display: inline-block;
-    border-radius: 25px; }
-  .Hero__mouse {
-    margin-bottom: 20px; }
-
 .mouse-icon {
   border: 2px solid #000;
   border-radius: 16px;
@@ -109,6 +60,71 @@
     top: 25px;
     opacity: 0; } }
 
+.Hero {
+  background: #FFEB3B;
+  color: black;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 50px; }
+  @media (min-width: 544px) {
+    .Hero {
+      margin-bottom: 100px; } }
+  .Hero__box {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center; }
+  .Hero__icon {
+    height: 6rem; }
+    @media (min-width: 544px) {
+      .Hero__icon {
+        height: 8rem; } }
+  .Hero__title {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 900;
+    font-size: 4rem;
+    margin: 0;
+    text-shadow: 0px 3px 0px #e1d430, 0px 14px 10px rgba(0, 0, 0, 0.15), 0px 24px 2px rgba(0, 0, 0, 0.1), 0px 34px 30px rgba(0, 0, 0, 0.1); }
+    @media (min-width: 544px) {
+      .Hero__title {
+        font-size: 6rem; } }
+  .Hero__slogan {
+    margin-bottom: 50px;
+    display: block; }
+  .Hero__btn {
+    text-decoration: none;
+    color: black;
+    border: 2px solid black;
+    padding: 5px 10px;
+    border-radius: 30px;
+    margin: 0 5px;
+    transition: all .3s ease; }
+    .Hero__btn:focus, .Hero__btn:hover {
+      background-color: black;
+      color: white; }
+    @media (min-width: 544px) {
+      .Hero__btn {
+        padding: 10px 20px; } }
+  .Hero__code {
+    font-family: monospace;
+    background: black;
+    color: white;
+    padding: 8px 15px;
+    margin-top: 25px;
+    display: inline-block;
+    border-radius: 25px; }
+  .Hero__mouse {
+    margin-bottom: 20px;
+    display: none; }
+    @media (min-width: 544px) {
+      .Hero__mouse {
+        display: block; } }
+
 .Heading {
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
@@ -129,7 +145,7 @@
     text-transform: lowercase; }
 
 .ExampleColumn {
-  background-color: #c9c9c9;
+  background-color: #FFC107;
   min-height: 30px;
   border-radius: 5px;
   display: flex;
@@ -141,10 +157,13 @@
   font-weight: 700; }
 
 .Layout__column:nth-child(2n) .ExampleColumn {
-  background-color: #b9b6b6; }
+  background-color: #FF9800; }
 
 .Slice {
-  margin-bottom: 100px; }
+  margin-bottom: 20px; }
+  @media (min-width: 544px) {
+    .Slice {
+      margin-bottom: 100px; } }
 
 .Code {
   background-color: #f5f1da;
