--- a/sass/hero.scss
+++ b/sass/hero.scss
@@ -1,12 +1,16 @@
 .Hero {
-    background: #f7ea3f;
+    background: #FFEB3B;
     color: black;
     height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+
+    @media (min-width: 544px) {
+        margin-bottom: 100px;
+    }
 
     @at-root &__box {
         flex: 1;
@@ -18,18 +22,26 @@
     }
 
     @at-root &__icon {
-        height: 8rem;
+        height: 6rem;
+
+        @media (min-width: 544px) {
+            height: 8rem;
+        }
     }
 
     @at-root &__title {
         font-family: 'Raleway', sans-serif;
         font-weight: 900;
-        font-size: 6rem;
+        font-size: 4rem;
         margin: 0;
         text-shadow: 0px 3px 0px #e1d430,
                      0px 14px 10px rgba(0,0,0,0.15),
                      0px 24px 2px rgba(0,0,0,0.1),
                      0px 34px 30px rgba(0,0,0,0.1);
+
+        @media (min-width: 544px) {
+            font-size: 6rem;
+        }
     }
 
     @at-root &__slogan {
@@ -41,7 +53,7 @@
         text-decoration: none;
         color: black;
         border: 2px solid black;
-        padding: 10px 20px;
+        padding: 5px 10px;
         border-radius: 30px;
         margin: 0 5px;
         transition: all .3s ease;
@@ -49,6 +61,10 @@
         &:focus, &:hover {
             background-color: black;
             color: white;
+        }
+
+        @media (min-width: 544px) {
+            padding: 10px 20px;
         }
     }
 
@@ -64,5 +80,10 @@
 
     @at-root &__mouse {
         margin-bottom: 20px;
+        display: none;
+
+        @media (min-width: 544px) {
+            display: block;
+        }
     }
 }
