Add new behaviour modifier for columns.

--- a/src/column/index.scss
+++ b/src/column/index.scss
@@ -4,3 +4,4 @@
 @import 'column.typography.modifiers.scss';
 @import 'column.visibility.modifiers.scss';
 @import 'column.offset.modifiers.scss';
+@import 'column.behaviour.modifiers.scss';
