Add new alignment modifier for rows.

--- a/src/row/row.alignment.modifiers.scss
+++ b/src/row/row.alignment.modifiers.scss
@@ -18,4 +18,9 @@
     @at-root &--valign-baseline {
         align-items: baseline;
     }
+
+    // Vertically align all columns to the center of the row.
+    @at-root &--valign-stretch {
+        align-items: stretch;
+    }
 }
