--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,6 +8,9 @@
 @import 'paragraph.scss';
 @import 'link.scss';
 @import 'pre.scss';
+@import 'navigation.scss';
+@import 'doc-body.scss';
+@import 'class-map.scss';
 
 body {
     padding: 0;
