--- a/sass/doc-body.scss
+++ b/sass/doc-body.scss
@@ -1,3 +1,7 @@
 .DocBody {
-    padding-top: 10rem;
+    padding-top: 6rem;
+
+    @media (min-width: 544px) {
+        padding-top: 10rem;
+    }
 }
