--- a/src/column/column.behaviour.modifiers.scss
+++ b/src/column/column.behaviour.modifiers.scss
@@ -1,4 +1,4 @@
-.Layout__column {
+.#{$block-name-layout}__column {
     @at-root &--fill-parent {
         display: flex;
         align-items: stretch;
