--- a/src/row/row.alignment.modifiers.scss
+++ b/src/row/row.alignment.modifiers.scss
@@ -1,4 +1,4 @@
-.Layout__row {
+.#{$block-name-layout}__row {
     // Vertically align all columns to the top of the row.
     @at-root &--valign-top {
         align-items: flex-start;
