--- a/src/row/row.block.scss
+++ b/src/row/row.block.scss
@@ -1,4 +1,4 @@
-.Layout__row {
+.#{$block-name-layout}__row {
     display: flex;
     margin-left: $gutter-width * -1;
     margin-right: $gutter-width * -1;
