--- a/sass/index.scss
+++ b/sass/index.scss
@@ -12,6 +12,7 @@
 @import 'doc-body.scss';
 @import 'class-map.scss';
 @import 'table.scss';
+@import 'hero-example.scss';
 
 body {
     padding: 0;
