--- a/src/zeus-dev.scss
+++ b/src/zeus-dev.scss
@@ -24,5 +24,5 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
 
-@import '../../../node_modules/normalize.css/normalize';
+@import '../node_modules/normalize.css/normalize';
 @import 'bootstrap.scss';
