Implement mixins to clean up codebase.

--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -30,6 +30,9 @@ SOFTWARE.
 // Global settings.
 @import 'variables.scss';
 
+// Mixins.
+@import 'mixins.scss';
+
 // Components.
 @import 'layout/index.scss';
 @import 'row/index.scss';
