--- a/src/column/column.size.modifiers.scss
+++ b/src/column/column.size.modifiers.scss
@@ -1,18 +1,22 @@
-.#{$block-name-layout}__column {
+@include root('column') {
     // This will automagically generate a column size modifier for each
     // device size (xs, sm, md, lg, xl) starting at 1 and going up to
     // the specified $column-count amount. Eg: Column--xs-6 or Column--1.
 
     @for $i from 1 through $column-count {
         // These will apply at all viewport sizes.
-        @at-root &--#{$i}, &--xs-#{$i} {
+        @include modifier('#{$i}') {
+            flex: 0 0 (($i / $column-count) * 100%);
+        }
+
+        @include modifier('xs-#{$i}') {
             flex: 0 0 (($i / $column-count) * 100%);
         }
     }
 
     @for $i from 1 through $column-count {
         // These will apply at mobile/touch viewport sizes.
-        @at-root &--sm-#{$i} {
+        @include modifier('sm-#{$i}') {
             @media (min-width: $viewport-sm) {
                 flex: 0 0 (($i / $column-count) * 100%);
             }
@@ -21,7 +25,7 @@
 
     @for $i from 1 through $column-count {
         // These will apply at tablet viewport sizes.
-        @at-root &--md-#{$i} {
+        @include modifier('md-#{$i}') {
             @media (min-width: $viewport-md) {
                 flex: 0 0 (($i / $column-count) * 100%);
             }
@@ -30,7 +34,7 @@
 
     @for $i from 1 through $column-count {
         // These will apply at desktop viewport sizes.
-        @at-root &--lg-#{$i} {
+        @include modifier('lg-#{$i}') {
             @media (min-width: $viewport-lg) {
                 flex: 0 0 (($i / $column-count) * 100%);
             }
@@ -39,7 +43,7 @@
 
     @for $i from 1 through $column-count {
         // These will apply at large desktop viewport sizes.
-        @at-root &--xl-#{$i} {
+        @include modifier('xl-#{$i}') {
             @media (min-width: $viewport-xl) {
                 flex: 0 0 (($i / $column-count) * 100%);
             }
