--- a/src/row/row.block.scss
+++ b/src/row/row.block.scss
@@ -1,4 +1,4 @@
-.#{$block-name-layout}__row {
+@include root('row') {
     display: flex;
     margin-left: $gutter-width * -1;
     margin-right: $gutter-width * -1;
