--- a/src/column/column.typography.modifiers.scss
+++ b/src/column/column.typography.modifiers.scss
@@ -1,135 +1,135 @@
-.#{$block-name-layout}__column {
-    @at-root &--text-left {
+@include root('column') {
+    @include modifier('text-left') {
         text-align: left;
     }
 
-    @at-root &--text-right {
+    @include modifier('text-right') {
         text-align: right;
     }
 
-    @at-root &--text-center {
+    @include modifier('text-center') {
         text-align: center;
     }
 
-    @at-root &--text-justify {
+    @include modifier('text-justify') {
         text-align: justify;
     }
 
-    @at-root &--xs-text-left {
+    @include modifier('xs-text-left') {
         @media (max-width: ($viewport-sm - 1)) {
             text-align: left !important;
         }
     }
 
-    @at-root &--xs-text-right {
+    @include modifier('xs-text-right') {
         @media (max-width: ($viewport-sm - 1)) {
             text-align: right !important;
         }
     }
 
-    @at-root &--xs-text-center {
+    @include modifier('xs-text-center') {
         @media (max-width: ($viewport-sm - 1)) {
             text-align: center !important;
         }
     }
 
-    @at-root &--xs-text-justify {
+    @include modifier('xs-text-justify') {
         @media (max-width: ($viewport-sm - 1)) {
             text-align: justify !important;
         }
     }
 
-    @at-root &--sm-text-left {
+    @include modifier('sm-text-left') {
         @media (max-width: ($viewport-md - 1)) and (min-width: $viewport-sm) {
             text-align: left !important;
         }
     }
 
-    @at-root &--sm-text-right {
+    @include modifier('sm-text-right') {
         @media (max-width: ($viewport-md - 1)) and (min-width: $viewport-sm) {
             text-align: right !important;
         }
     }
 
-    @at-root &--sm-text-center {
+    @include modifier('sm-text-center') {
         @media (max-width: ($viewport-md - 1)) and (min-width: $viewport-sm) {
             text-align: center !important;
         }
     }
 
-    @at-root &--sm-text-justify {
+    @include modifier('sm-text-justify') {
         @media (max-width: ($viewport-md - 1)) and (min-width: $viewport-sm) {
             text-align: justify !important;
         }
     }
 
-    @at-root &--md-text-left {
+    @include modifier('md-text-left') {
         @media (max-width: ($viewport-lg - 1)) and (min-width: $viewport-md) {
             text-align: left !important;
         }
     }
 
-    @at-root &--md-text-right {
+    @include modifier('md-text-right') {
         @media (max-width: ($viewport-lg - 1)) and (min-width: $viewport-md) {
             text-align: right !important;
         }
     }
 
-    @at-root &--md-text-center {
+    @include modifier('md-text-center') {
         @media (max-width: ($viewport-lg - 1)) and (min-width: $viewport-md) {
             text-align: center !important;
         }
     }
 
-    @at-root &--md-text-justify {
+    @include modifier('md-text-justify') {
         @media (max-width: ($viewport-lg - 1)) and (min-width: $viewport-md) {
             text-align: justify !important;
         }
     }
 
-    @at-root &--lg-text-left {
+    @include modifier('lg-text-left') {
         @media (max-width: ($viewport-xl - 1)) and (min-width: $viewport-lg) {
             text-align: left !important;
         }
     }
 
-    @at-root &--lg-text-right {
+    @include modifier('lg-text-right') {
         @media (max-width: ($viewport-xl - 1)) and (min-width: $viewport-lg) {
             text-align: right !important;
         }
     }
 
-    @at-root &--lg-text-center {
+    @include modifier('lg-text-center') {
         @media (max-width: ($viewport-xl - 1)) and (min-width: $viewport-lg) {
             text-align: center !important;
         }
     }
 
-    @at-root &--lg-text-justify {
+    @include modifier('lg-text-justify') {
         @media (max-width: ($viewport-xl - 1)) and (min-width: $viewport-lg) {
             text-align: justify !important;
         }
     }
 
-    @at-root &--xl-text-left {
+    @include modifier('xl-text-left') {
         @media (min-width: $viewport-xl) {
             text-align: left !important;
         }
     }
 
-    @at-root &--xl-text-right {
+    @include modifier('xl-text-right') {
         @media (min-width: $viewport-xl) {
             text-align: right !important;
         }
     }
 
-    @at-root &--xl-text-center {
+    @include modifier('xl-text-center') {
         @media (min-width: $viewport-xl) {
             text-align: center !important;
         }
     }
 
-    @at-root &--xl-text-justify {
+    @include modifier('xl-text-justify') {
         @media (min-width: $viewport-xl) {
             text-align: justify !important;
         }
