--- a/bin/zeus.css
+++ b/bin/zeus.css
@@ -464,10 +464,13 @@ body {
   flex-wrap: wrap; }
 
 .Layout__row--gapless {
-  margin-left: 0;
-  margin-right: 0; }
+  margin-left: 0px;
+  margin-right: 0px; }
   .Layout__row--gapless .Layout__column {
-    padding: 0; }
+    padding: 0px; }
+
+.Layout__row--bottomless {
+  margin-bottom: -1.3rem; }
 
 .Layout__column {
   overflow: hidden;
@@ -479,19 +482,34 @@ body {
   .Layout__column .Layout__row {
     margin-bottom: -1.3rem; }
 
-.Layout__column--quater, .Layout__column--xs-quater {
+.Layout__column--quater {
   flex: 0 0 25%; }
 
-.Layout__column--three-quaters, .Layout__column--xs-three-quaters {
+.Layout__column--xs-quater {
+  flex: 0 0 25%; }
+
+.Layout__column--three-quaters {
   flex: 0 0 75%; }
 
-.Layout__column--third, .Layout__column--xs-third {
+.Layout__column--xs-three-quaters {
+  flex: 0 0 75%; }
+
+.Layout__column--third {
   flex: 0 0 33.33333%; }
 
-.Layout__column--two-thirds, .Layout__column--xs-two-thirds {
+.Layout__column--xs-third {
+  flex: 0 0 33.33333%; }
+
+.Layout__column--two-thirds {
   flex: 0 0 66.66667%; }
 
-.Layout__column--half, .Layout__column--xs-half {
+.Layout__column--xs-two-thirds {
+  flex: 0 0 66.66667%; }
+
+.Layout__column--half {
+  flex: 0 0 50%; }
+
+.Layout__column--xs-half {
   flex: 0 0 50%; }
 
 @media (min-width: 544px) {
@@ -542,40 +560,76 @@ body {
   .Layout__column--xl-half {
     flex: 0 0 50%; } }
 
-.Layout__column--1, .Layout__column--xs-1 {
+.Layout__column--1 {
   flex: 0 0 8.33333%; }
 
-.Layout__column--2, .Layout__column--xs-2 {
+.Layout__column--xs-1 {
+  flex: 0 0 8.33333%; }
+
+.Layout__column--2 {
   flex: 0 0 16.66667%; }
 
-.Layout__column--3, .Layout__column--xs-3 {
+.Layout__column--xs-2 {
+  flex: 0 0 16.66667%; }
+
+.Layout__column--3 {
   flex: 0 0 25%; }
 
-.Layout__column--4, .Layout__column--xs-4 {
+.Layout__column--xs-3 {
+  flex: 0 0 25%; }
+
+.Layout__column--4 {
   flex: 0 0 33.33333%; }
 
-.Layout__column--5, .Layout__column--xs-5 {
+.Layout__column--xs-4 {
+  flex: 0 0 33.33333%; }
+
+.Layout__column--5 {
   flex: 0 0 41.66667%; }
 
-.Layout__column--6, .Layout__column--xs-6 {
+.Layout__column--xs-5 {
+  flex: 0 0 41.66667%; }
+
+.Layout__column--6 {
   flex: 0 0 50%; }
 
-.Layout__column--7, .Layout__column--xs-7 {
+.Layout__column--xs-6 {
+  flex: 0 0 50%; }
+
+.Layout__column--7 {
   flex: 0 0 58.33333%; }
 
-.Layout__column--8, .Layout__column--xs-8 {
+.Layout__column--xs-7 {
+  flex: 0 0 58.33333%; }
+
+.Layout__column--8 {
   flex: 0 0 66.66667%; }
 
-.Layout__column--9, .Layout__column--xs-9 {
+.Layout__column--xs-8 {
+  flex: 0 0 66.66667%; }
+
+.Layout__column--9 {
   flex: 0 0 75%; }
 
-.Layout__column--10, .Layout__column--xs-10 {
+.Layout__column--xs-9 {
+  flex: 0 0 75%; }
+
+.Layout__column--10 {
   flex: 0 0 83.33333%; }
 
-.Layout__column--11, .Layout__column--xs-11 {
+.Layout__column--xs-10 {
+  flex: 0 0 83.33333%; }
+
+.Layout__column--11 {
   flex: 0 0 91.66667%; }
 
-.Layout__column--12, .Layout__column--xs-12 {
+.Layout__column--xs-11 {
+  flex: 0 0 91.66667%; }
+
+.Layout__column--12 {
+  flex: 0 0 100%; }
+
+.Layout__column--xs-12 {
   flex: 0 0 100%; }
 
 @media (min-width: 544px) {
@@ -882,40 +936,76 @@ body {
   .Layout__column--hidden-xl {
     display: none !important; } }
 
-.Layout__column--offset-1, .Layout__column--xs-offset-1 {
+.Layout__column--offset-1 {
   margin-left: 8.33333%; }
 
-.Layout__column--offset-2, .Layout__column--xs-offset-2 {
+.Layout__column--xs-offset-1 {
+  margin-left: 8.33333%; }
+
+.Layout__column--offset-2 {
   margin-left: 16.66667%; }
 
-.Layout__column--offset-3, .Layout__column--xs-offset-3 {
+.Layout__column--xs-offset-2 {
+  margin-left: 16.66667%; }
+
+.Layout__column--offset-3 {
   margin-left: 25%; }
 
-.Layout__column--offset-4, .Layout__column--xs-offset-4 {
+.Layout__column--xs-offset-3 {
+  margin-left: 25%; }
+
+.Layout__column--offset-4 {
   margin-left: 33.33333%; }
 
-.Layout__column--offset-5, .Layout__column--xs-offset-5 {
+.Layout__column--xs-offset-4 {
+  margin-left: 33.33333%; }
+
+.Layout__column--offset-5 {
   margin-left: 41.66667%; }
 
-.Layout__column--offset-6, .Layout__column--xs-offset-6 {
+.Layout__column--xs-offset-5 {
+  margin-left: 41.66667%; }
+
+.Layout__column--offset-6 {
   margin-left: 50%; }
 
-.Layout__column--offset-7, .Layout__column--xs-offset-7 {
+.Layout__column--xs-offset-6 {
+  margin-left: 50%; }
+
+.Layout__column--offset-7 {
   margin-left: 58.33333%; }
 
-.Layout__column--offset-8, .Layout__column--xs-offset-8 {
+.Layout__column--xs-offset-7 {
+  margin-left: 58.33333%; }
+
+.Layout__column--offset-8 {
   margin-left: 66.66667%; }
 
-.Layout__column--offset-9, .Layout__column--xs-offset-9 {
+.Layout__column--xs-offset-8 {
+  margin-left: 66.66667%; }
+
+.Layout__column--offset-9 {
   margin-left: 75%; }
 
-.Layout__column--offset-10, .Layout__column--xs-offset-10 {
+.Layout__column--xs-offset-9 {
+  margin-left: 75%; }
+
+.Layout__column--offset-10 {
   margin-left: 83.33333%; }
 
-.Layout__column--offset-11, .Layout__column--xs-offset-11 {
+.Layout__column--xs-offset-10 {
+  margin-left: 83.33333%; }
+
+.Layout__column--offset-11 {
   margin-left: 91.66667%; }
 
-.Layout__column--offset-12, .Layout__column--xs-offset-12 {
+.Layout__column--xs-offset-11 {
+  margin-left: 91.66667%; }
+
+.Layout__column--offset-12 {
+  margin-left: 100%; }
+
+.Layout__column--xs-offset-12 {
   margin-left: 100%; }
 
 @media (min-width: 544px) {
