--- a/src/row/index.scss
+++ b/src/row/index.scss
@@ -2,3 +2,4 @@
 @import 'row.alignment.modifiers.scss';
 @import 'row.spacing.modifiers.scss';
 @import 'row.flow.modifiers.scss';
+@import 'row.layout.modifiers.scss';
